--- a/index.html
+++ b/index.html
@@ -2,42 +2,47 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>我的二级网页</title>
+<title>大鸟飞啊飞</title>
 </head>
 <body>
   <div style="
-	background-color:#f1f1f1;
-	text-align:center;
+	background-color:pink;
 	padding:40px;
 	font-size:40px;	
-	color:pink		  
+	color:black		  
   ">
 	<img src='https://i2.imgs.ovh/d/BQACAgEAAx0EUvSR8wACASJmnLSagUx5fgnYCNj6B_XWJrnxNQACFgYAAsnx4UQw_XecsqFO2TUE' alt="马博" width="80px" height="80px">
 	  <p>呆</p>  
   </div>
   <div style="
 		text-align:center;
-		max-width:700px;
+		background-color:purple
+	        max-width:700px;
 		margin:30px auto;
 		padding:15px;
 		line-height:1.7;
 		font-size:20px;
-		color:yellowgreen	  
+		color:white	  
 		">
-	  <p>我是呆逼，</p>
-	  <p>我很呆。</p>
-	  <p>你以后可以叫我马sir。</p>
-	  <p>我现在更喜欢你叫我父亲。</p>
+	  <p>我是李狗，</p>
+	  <p>我曾在与猫的斗争中流血，</p>
+	  <p>可惜我爱的却是一个人，</p>
+	  <p>欸，我好像也是个人哎。</p>
+	  <p>我是人吗？</p>
+	  <p>欢迎来渤海银行与我深入探讨。</p>
+	  <p>记得骑着白马如旋风般降临，</p>
+	  <p>我请你吃嘴巴子。</p>
 	</div>
   <div style="
-	background-color:#f1f1f1;
+	background-color:pink;
 	text-align:center;
 	padding:140px;	
 	font-size:12px;	
 	color:red		  
   ">
-	<p>我的另一个网站</p>
-	  <a href="https://bilibili.com/">  直达链接</a>
+	<p>copyright</p>
+	<p>欲知详情请点击下方链接</p>  
+	  <a href="https://bilibili.com/">通往新世界的大门 </a>
 	</div>
 </body>
 </html>
