--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <div style="
-	background-color:pink;
+	background-color:#f1;
+	text-align:center;
 	padding:40px;
 	font-size:40px;	
 	color:black		  
@@ -15,14 +16,12 @@
 	  <p>呆</p>  
   </div>
   <div style="
-		text-align:center;
-		background-color:purple
 	        max-width:700px;
 		margin:30px auto;
 		padding:15px;
 		line-height:1.7;
 		font-size:20px;
-		color:white	  
+		color:yellowgreen	  
 		">
 	  <p>我是李狗，</p>
 	  <p>我曾在与猫的斗争中流血，</p>
@@ -37,7 +36,7 @@
 	background-color:pink;
 	text-align:center;
 	padding:140px;	
-	font-size:12px;	
+	font-size:20px;	
 	color:red		  
   ">
 	<p>copyright</p>
