--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div style="
-	background-color:#f1;
+	background-color:grey;
 	text-align:center;
 	padding:40px;
 	font-size:40px;	
